# believable

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Believable Minds Improvement Spec Four Features.md  Dockerfile  PROJECT_REVIEW_BRIEF.md  README.md  alembic.ini  believable_minds_addendum_official_transcripts.md  believable_minds_amendment_v2.md  believable_minds_final_spec.docx  believable_minds_final_spec.md  believable_minds_improvement_spec.docx  believable_minds_v2_claude_code_spec.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_transcript_cols.py  003_add_briefs_table.py  004_add_favorites_and_summaries.py  005_add_x_twitter_support.py  006_v2_redesign.py  007_improvements.py
data/: channel_roles_seed.json  channels_seed.json  people_seed.json  topics_seed.json
scripts/: start.sh
src/: config.py  executables.py  logging_config.py  youtube.py
src/api/: admin.py  app.py  cache.py  public.py
src/cli/: brief.py  channels.py  enrich.py  favorites.py  identify.py  main.py  people.py  scan.py  summaries_cli.py  topics.py  transcribe.py  x_cli.py
src/db/: enums.py  models.py  seed.py  session.py
src/pipeline/: briefs.py  delivery.py  discovery.py  embeddings.py  enrichment.py  identification.py  positions.py  scheduler.py  summaries.py  transcription.py  x_ingestion.py
tests/: test_briefs.py  test_discovery.py  test_enrichment.py  test_executables.py  test_llm_tool.py  test_official_transcript.py  test_seed_data.py  test_transcription.py  test_youtube.py
tools/: resolve_channel_ids.py
(+7 files in other folders)
