[project]
name = "believable-minds"
version = "0.1.0"
description = "A data production system that tracks what credible minds say, how their views evolve, and where they converge or diverge."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.3,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "typer[all]>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.0,<3.0",
    "yt-dlp>=2024.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
bm = "src.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
